--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.chenyang.livestudy.MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_ffffff"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:id="@+id/main_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#eeeeee" />
+
+        <RadioGroup
+            android:id="@+id/tab_rg_menu"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/tab_rb_1"
+                style="@style/tab_rb_style"
+                android:checked="true"
+                android:drawableTop="@drawable/tab_selector_offline"
+                android:text="首页" />
+
+            <RadioButton
+                android:id="@+id/tab_rb_2"
+                style="@style/tab_rb_style"
+                android:drawableTop="@drawable/tab_selector_offline"
+                android:text="发现" />
+
+            <RadioButton
+                android:id="@+id/tab_rb_3"
+                style="@style/tab_rb_style"
+                android:drawableTop="@drawable/tab_selector_offline"
+                android:text="发布" />
+
+            <RadioButton
+                android:id="@+id/tab_rb_4"
+                style="@style/tab_rb_style"
+                android:drawableTop="@drawable/tab_selector_offline"
+                android:text="消息" />
+
+            <RadioButton
+                android:id="@+id/tab_rb_5"
+                style="@style/tab_rb_style"
+                android:drawableTop="@drawable/tab_selector_offline"
+                android:text="我的" />
+        </RadioGroup>
+
+        <com.chenyang.livestudy.fragment.MyFragmentTabHost
+            android:id="@+id/tabhost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical">
+
+                <FrameLayout
+                    android:id="@+id/tabcontent"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="0"
+                    android:visibility="gone" />
+
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="#383838"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+
+        </com.chenyang.livestudy.fragment.MyFragmentTabHost>
+
+    </LinearLayout>
 </RelativeLayout>
